# flakreate

./: Cargo.toml  README.md  flake.nix  justfile
src/: lib.rs  main.rs  template.rs
src/flake_template/: fileop.rs  mod.rs  param.rs  replace.rs  template.rs
