[package]
authors = ["Sridhar Ratnakumar <srid@srid.ca>"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "flakreate"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.14", features = ["derive"] }
console = "0.15.8"
inquire = "0.7.5"
nix_rs = "0.4.0"
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
